# chirppp

./: .gitignore  CHIP_CONFIG_COMMANDS  Cargo.toml  LICENSE  VOCORE_CONFIG_COMMANDS  build_multi.sh
src/: main  main.rs
