[package]
name = "chirppp"
version = "0.0.0"
authors = ["Dominic <awesome3165@gmail.com>"]

[dependencies]
lora_driver = { git = 'https://github.com/ddemarco5/lora_driver.git' }
sysfs_gpio = "0.5.1"
bit-vec = "0.4.4"
serial = "0.3.4"


# This is necessary because serial's .toml doesn't have our desired arch
[replace]
"serial:0.3.4" = { path = '../serial-rs' }
